name:                GLX
version:             0.1.0
synopsis:            Bindings for GLX

description:
  This package provides a collection of bindings for GLX 1.3, the OpenGL
  extension to the X Window System.
  .
  See <http://www.opengl.org/registry/> for more information.

homepage:            https://github.com/anthonyde/GLX
bug-reports:         https://github.com/anthonyde/GLX/issues
license:             BSD3
license-file:        LICENSE
author:              Anthony DeRossi
maintainer:          Anthony DeRossi <ajderossi@gmail.com>
copyright:           Copyright (c) 2012 Anthony DeRossi
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC == 7.0.4

source-repository head
  type:                git
  location:            git://github.com/anthonyde/GLX.git

source-repository this
  type:                git
  location:            git://github.com/anthonyde/GLX.git
  tag:                 v0.1.0

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-tools:         hsc2hs

  other-extensions:
    ForeignFunctionInterface
    GeneralizedNewtypeDeriving

  exposed-modules:
    Graphics.X11.GLX
    Graphics.X11.GLX.Raw
    Graphics.X11.GLX.Raw.Core13
    Graphics.X11.GLX.Raw.Core13.Events
    Graphics.X11.GLX.Raw.Core13.Types

  build-depends:
    OpenGLRaw            >= 1.2 && < 1.3,
    X11                  >= 1.4 && < 1.6,
    X11-visualinfo       >= 0.1 && < 0.2,
    base                 >= 4   && < 5

  extra-libraries:     "GL"
